# advent-of-code

./: .editorconfig  .gitignore  README.md
.github/workflows/: 2015-typescript-test.yml  2016-python-test.yml  2017-rust-test.yml  2018-santa-lang-test.yml  2020-clojure-test.yml  2020-typescript-test.yml  2021-c-test.yml  2021-python-test.yml  2022-santa-lang-test.yml  2023-santa-lang-test.yml  2025-santa-lang-test.yml
.santa-agent/: .gitignore  IDIOMATIC.md  README.md  package.json
.santa-agent/src/: agent.ts  aoc-client.ts  discovery.ts  index.tsx  source-reader.ts  tools.ts
2015/: README.md
2015/santa-lang/: aoc2015_day01.santa  aoc2015_day02.santa  aoc2015_day03.santa  aoc2015_day04.santa  aoc2015_day05.santa  aoc2015_day06.santa  aoc2015_day07.santa  aoc2015_day08.santa  aoc2015_day09.santa  aoc2015_day10.santa  aoc2015_day11.santa  aoc2015_day12.santa  aoc2015_day13.santa  aoc2015_day14.santa  aoc2015_day15.santa  aoc2015_day16.santa  aoc2015_day17.santa  aoc2015_day18.santa  aoc2015_day19.santa  aoc2015_day20.santa  aoc2015_day21.santa  aoc2015_day22.santa  aoc2015_day23.santa  aoc2015_day24.santa  aoc2015_day25.santa
2015/typescript/: .gitignore  README.md  package.json  tsconfig.json
2016/python/: Makefile  README.md
2020/: Dockerfile  Makefile  README.md  helpers.clj
2021/: README.md
2021/c/pico/: .gitignore  CMakeLists.txt  aoc2021.cpp
2021/c/pico/display/: font.hpp  font6_data.hpp  font8_data.hpp  pico_display.cpp  pico_display.hpp  pico_graphics.cpp  pico_graphics.hpp  pimoroni_common.hpp  st7789.cpp  st7789.hpp  types.cpp
(+849 files in other folders)
